<resources>
    <string name="app_name">FestivalApp</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_navigation_drawer">Navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="registration">Registruj se</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="login">Uloguj se</string>
    <string name="first_name">Ime</string>
    <string name="last_name">Prezime</string>
    <string name="email">E-mail</string>
    <string name="city">Grad</string>
    <string name="country">Drzava</string>
    <string name="addresss">Adresa</string>
    <string name="age">Starost</string>
    <string name="adminLogged">admin</string>
    <string name="already_registred">Imate nalog? Ulogujte se.</string>
    <string-array name="countries">
        <item>Srbija</item>
        <item>Hrvatska</item>
        <item>Bosna i Hercegovina</item>
        <item>Makedonija</item>
        <item>Crna Gora</item>
        <item>Slovenija</item>
    </string-array>
    <string name="title_activity_festival_detail_tabs">FestivalDetailTabs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="google_map_api">AIzaSyDK_DkeaBfd8IUJ3pYINB-ZqxOQ3EtU_CI</string>

</resources>
