<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">


        <TextView
            android:id="@+id/registration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Registracija"
            android:textSize="50sp" />

        <ImageView
            android:id="@+id/registration_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/registration_text"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_user_logo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/registration_image"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_user_logo"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_password_logo"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_user_logo"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstname"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_user_logo"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/Country"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastname"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_home_logo"
            android:ems="10"
            android:hint="@string/country"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/city"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Country"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_home_logo"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_home_logo"
            android:ems="10"
            android:hint="@string/addresss"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/age"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_age"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="textPersonName"
            android:textSize="12sp" />


        <Button
            android:id="@+id/button_registration"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/age"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:text="@string/registration"
            android:textColor="@color/colorText" />


     <!--   <TextView
            android:id="@+id/backtologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_registration"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:clickable="true"
            android:linksClickable="true"
            android:text="@string/already_registred"
            android:textColor="@android:color/black"
            android:textSize="15sp" />-->


        <!--<android.widget.TextView-->
        <!--android:id="@+id/tvInvisibleError"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_alignRight="@+id/city"-->
        <!--android:layout_alignBottom="@+id/city"-->
        <!--android:layout_marginTop="0dp"-->
        <!--android:focusable="true"-->
        <!--android:focusableInTouchMode="true"-->
        <!--android:paddingTop="0dp"-->
        <!--android:paddingRight="50dp" />-->

    </RelativeLayout>
</ScrollView>